<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MobiAuction</string>
    <string name="title_activity_main">MobiAuction</string>
    <string name="title_activity_login">MobiAuction</string>
    <string name="title_activity_items">MobiAuction</string>
    <string name="prompt_bidder">Bidder #</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_bidder">The Bidder # is not valid.</string>
    <string name="error_invalid_password">This Password is too short.</string>
    <string name="error_incorrect_password">The Password is not valid.</string>
    <string name="error_field_required">This field is required.</string>
    <string name="progresss_authenticating">Authenticating…</string>
    <string name="title_fund">Fund A Cause</string>
    <string name="list_no_results">No Results</string>
    <string name="fund_prompt">Do you want to give %1$s?\n\nThis is in addition to any previous amount.</string>
    <string name="fund_success">Thanks for the contribution!</string>
    <string name="fund_failed">There was a problem updating your fund amount. Please try again.</string>
    <string name="refresh_success">Items successfully updated.</string>
    <string name="refresh_failed">There was a problem updating the items.</string>
    <string name="prompt_yes">Yes</string>
    <string name="prompt_no">No</string>
    <string name="search">Search</string>
    <string name="search_hint">Keywords or Item#</string>
    <string name="action_refresh">Refresh</string>
    <string name="label_winning">Winning</string>
    <string name="label_losing">losing</string>
    <string name="label_watching">Watching</string>
    <string name="button_bid">Place Bid</string>
    <string name="label_itemnumber">Item #:</string>
    <string name="label_itembidcount"># of bids:</string>
    <string name="label_itemwinner">Winning bidder:</string>
    <string name="label_itemincrement">Min. increment:</string>
    <string name="label_itemseller">Donated by:</string>
    <string name="label_itemvalue">Value:</string>
    <string name="bid_prompt">Do you want to bid %1$s?</string>
    <string name="bid_success">Your bid has been placed!</string>
    <string name="bid_failed">There was a problem bidding. Please try again.</string>
    <string name="label_fundvalueone">$25</string>
    <string name="lable_fundvaluetwo">$50</string>
    <string name="label_fundvaluethree">$100</string>
    <string name="label_fundvalueother">Other</string>
    <string name="label_welcome">Welcome %1$s. Happy Bidding!</string>
    <string name="label_bidder">Bidder#: %1$s</string>
    <string name="label_winning2">Winning: %1$s</string>
    <string name="label_losing2">Losing: %1$s</string>
    <string name="title_activity_bid">Details</string>
    <string name="title_activity_item_list">Items</string>
    <string name="title_activity_fund">Fund A Cause</string>
    <string name="message_outbid_title">You have been outbid!</string>
    <string name="message_outbid_content">Touch to view My Items.</string>
    <string name="message_outbid_generic">You have been outbid! Touch My Items to view current bids.</string>
    <string name="myitems">My Items</string>
    <string name="items">Items</string>
    <string name="fundacause">Fund</string>
    <string name="lowbids">Low Bids</string>
    <string name="searchresults">Search</string>

    <string-array name="label_bid_count">
        <item>"No bids"</item>
        <item>"1 bid"</item>
        <item>"%1$s bids"</item>
    </string-array>
</resources>
