<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemRow1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/fundValue" />
    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemRow1"
        android:id="@+id/itemRow2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fundvalueone"
                android:id="@+id/fundValueOne"
                android:layout_gravity="left|top"
                android:layout_weight="1.0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lable_fundvaluetwo"
                android:id="@+id/fundValueTwo"
                android:layout_gravity="center_horizontal|top"
                android:layout_weight="1.0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fundvaluethree"
                android:id="@+id/fundValueThree"
                android:layout_gravity="right|top"
                android:layout_weight="1.0" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/itemRow3"
        android:layout_below="@+id/itemRow2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top">

            <com.mobiaware.mobiauction.controls.ValueStepper
                android:id="@+id/fundValueStepper"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fundvalueother"
                android:id="@+id/fundValueOther" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
